New Features:

Enhancements:

Gossip:

Removals:
- Removed the "set" command. The Deposit Keep Amount and Trainer Protection variables can now be set manually from within the settings menu.

Fixes:
- All sliders in the settings should now increment by their designated intervals.