@@ -1,6 +1,7 @@
 New Features:
 
 Enhancements:
+- The Deposit Keep Amount and Trainer Protection slider values are now displayed as gold.
 
 Gossip:
 
@@ -9,3 +10,4 @@ Removals:
 
 Fixes:
 - All sliders in the settings should now increment by their designated intervals.
+- The Guild Bank module should now be working as intended (for real this time!)
